# bmstu_iu7_db

./: .gitmodules  README.md
extra_02/: README.md
extra_02/scripts/: script.sql
extra_03/: README.md
extra_03/docs/: task.txt
extra_03/scripts/: script.sql
lab_01/: .gitignore  README.md  create_tables.sql  db_er.drawio  docker-compose.yml  gen_migr_1_2.py  gen_table_data.py
lab_01/queries/: create_tables.sql  create_user.sql  fill_out_tables.sql  migr_1_2.sql
lab_02/: README.md
lab_02/extra_task/: README.md  create_database.sql  fill_table.sql  query.sql
lab_02/queries/: extra_query.sql  query_01_comparison.sql  query_02_between.sql  query_03_like.sql  query_04_in.sql  query_06_all.sql  query_07_avg.sql  query_08_scalar.sql  query_09_case.sql  query_10_case_cond.sql  query_11_temp_table.sql  query_12_correlated.sql  query_13_triple_nesting.sql  query_14_group_by.sql  query_15_having.sql  query_16_insert.sql  query_17_multistr_insert.sql  query_18_update.sql  query_19_update_scalar_set.sql  query_20_delete.sql  query_21_delete_correlated.sql  query_22_with.sql  query_23_recursive.sql  query_24_avg_over.sql  query_25_row_number.sql
lab_03/queries/: query_01_func_scalar.sql  query_04_rec.sql  (+9 more)
lab_04/: README.md  queries.sql
lab_05/: def.sql  def_songs.json  queries.sql
lab_06/: .gitignore  CMakeLists.txt  README.md
lab_06/src/: beast.hpp  http_session.cpp  http_session.hpp  listener.cpp  listener.hpp  main.cpp  net.hpp  shared_state.cpp  shared_state.hpp
lab_06/templates/: scaler.html  table.html
rk_02/: queries.sql
rk_03/: main.py  query.sql
